# SewnCovers

./: .gitignore  LICENSE  README.md
backend/: .env.example  README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/tests/: __init__.py  test_app.py
docs/: PROJECT_PROGRESS.md
frontend/: .env.example  README.md  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/configure/: page.tsx
frontend/components/configurator/: configuration-summary.tsx  configurator.tsx  cushion-preview.tsx  index.ts  measurement-diagram.tsx  measurement-step.tsx  pattern-card.tsx  pattern-filter.tsx  pattern-step.tsx  preview-calculations.ts  preview-step.tsx  shape-illustration.tsx  shape-selection-step.tsx  square-configurator.tsx  square-measurement-step.tsx  square-pattern-step.tsx  square-preview-step.tsx  step-indicator.tsx
frontend/components/landing/: cushion-example.tsx  index.ts
frontend/components/layout/: index.ts  navigation.ts  site-footer.tsx  site-header.tsx
frontend/components/ui/: button.tsx  class-names.ts  error-message.tsx  index.ts  loading-spinner.tsx  loading-state.tsx  number-input.tsx  unit-selector.tsx
frontend/context/configuration/: configuration-context.tsx  index.ts  measurements.ts  pattern-scale.ts  reducer.ts  types.ts
frontend/data/: patterns.ts  shapes.ts
