[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "sewncovers-api"
version = "0.1.0"
description = "FastAPI backend for the SewnCovers MVP"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi==0.139.2",
    "uvicorn==0.51.0",
]

[project.optional-dependencies]
dev = [
    "httpx2==2.7.0",
    "pytest==9.1.1",
    "ruff==0.15.22",
]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.ruff.format]
quote-style = "double"

[tool.setuptools.packages.find]
include = ["app*"]
